# Computing_Project

./: .travis.yml  Doxyfile  README.md  cell.cpp  generateDocumentationAndDeploy.sh
Computing project/: .gitignore  .travis.yml  3d_viewer  CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  README.md  cell.hpp  cmake_install.cmake  input_file.txt  main  main.cpp  mainpage.dox.cpp  make.bash  material.hpp  model.hpp  modeltest  modeltest.cpp  new.txt  newfile.txt  output_file.txt  render.html  run.bash  vector.hpp
Computing project/Doxygen Pages/: instructions.dox  instructions.dox.cpp  mainpage.dox  mainpage.dox.cpp
Computing project/Images/: logo.icns
Computing project/QT_Classes/: CMakeLists.txt  DeployQt5.cmake  STL_reader.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_STL.cpp  mainwindow_old.cpp  vtk_renderer.cpp
Computing project/Test Mains/: CMakeLists.txt  Vector_test.cpp  cell_test.cpp  material_test.cpp  modeltest  modeltest.cpp  newfile.txt
Computing project/Test Objects/: 3d_apple_logo_stl_neu.stl  50_Cal_BMG.STL  Air_Engine_1-Layout-Scaled-2.stl  Bayonet.stl  GCSH01.stl  GCSH02.stl  GCSH03.stl  GCSH04.stl  GCSH05.stl  GCSH06.stl  GCSH07.stl  GCSH08.stl  GCSH09.stl  GCSH10.stl  GCSH11.stl  GCSH12.stl  GCSH13.stl  GCSH14.stl  GCSH15.stl  GSHS09.stl  IrisLeaves.stl  L bracket.stl  Lbracket2.stl  Poly_Tiger.stl  Princess Logo1.stl  SHADES_Rev3.stl  Team36Logo.stl  Throwing_Knife.stl  bearing_20140913-24409-10xsd36-0.stl  electronic_component.stl  gear wheel.stl  gear_example.stl  k8200boardcover.stl  makerbot_customizable_iphone_case_20140811-2406-1q65fgw-0.stl  raspberrypitray.stl  rotating gears.stl  rpirack.stl  test123.stl  toyEngineParts.stl
Computing project/Test Objects/Perpetual_Motion_Test_-_Da_Vinci_Overbalanced_Wheel/: Perpetual_Wheel.stl  Perpetual_Wheel_Base.stl  Perpetual_Wheel_Weights_12.stl
Computing project/Volume_of_tetra_function/: volume_of_tetra.hpp
Computing project/cell_class/: cell.cpp  cell.hpp
Computing project/js/: render.html
Computing project/material_class/: material.cpp  material.hpp
Computing project/matrix_class/: matrix.cpp  matrix.hpp
Computing project/model_class/: model.cpp  model.hpp
Computing project/renderer_class/: renderer.cpp  renderer.hpp
Computing project/vector_class/: vector.cpp  vector.hpp
html/: Instruction.html  Instruction_page.html  _vector__test_8cpp.html  annotated.html  bug.html  cell_8cpp.html  (+88 more)
(+51 files in other folders)
